[gd_scene load_steps=4 format=3 uid="uid://crded64bqwt0k"]

[ext_resource type="Texture2D" uid="uid://bsgtfl32oicvd" path="res://icon.svg" id="1_dt7qc"]
[ext_resource type="Script" path="res://UI/talent_tree/SkillButton.gd" id="2_5xu5y"]
[ext_resource type="FontFile" uid="uid://cghrehhqxyf0h" path="res://UI/VCR_OSD_MONO_1.001.ttf" id="2_btobi"]

[node name="SkillButton" type="TextureButton"]
texture_filter = 1
anchors_preset = -1
anchor_right = 0.021
anchor_bottom = 0.037
offset_right = -0.320004
offset_bottom = 0.0400009
disabled = true
toggle_mode = true
texture_normal = ExtResource("1_dt7qc")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_5xu5y")

[node name="Panel" type="Panel" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="MarginContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_btobi")
theme_override_font_sizes/font_size = 10
text = "0/0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Line2D" type="Line2D" parent="."]
top_level = true
z_index = -1
width = 3.0
default_color = Color(0.227451, 0.227451, 0.227451, 1)

[node name="TooltipPanel" type="Panel" parent="."]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 1.225
anchor_top = -0.225
anchor_right = 3.705
anchor_bottom = 2.815
offset_right = -59.2
offset_bottom = -81.6
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.48, 3.04)
mouse_filter = 2

[node name="BoxContainer" type="BoxContainer" parent="TooltipPanel"]
z_index = 2
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 160.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
alignment = 1
vertical = true

[node name="Label" type="Label" parent="TooltipPanel/BoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_btobi")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="Label2" type="Label" parent="TooltipPanel/BoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_btobi")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="Label3" type="Label" parent="TooltipPanel/BoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_btobi")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="Label4" type="Label" parent="TooltipPanel/BoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_btobi")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="Label5" type="Label" parent="TooltipPanel/BoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_btobi")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="Label6" type="Label" parent="TooltipPanel/BoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_btobi")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
